tests/lean/1011.lean.expected.out
1011.lean:5:11-5:12: error: unknown identifier 'A'
