tests/lean/1011.lean
def f (x : A) := x

set_option relaxedAutoBoundImplicitLocal false

def g (x : A) := x
